# valorem

./: .gitignore  Anchor.toml  CONTRACTS_RELOCATION_AGENT_PROMPT.md  CONTRIBUTING.md  Cargo.toml  IDEA_CORE.md  IMPLEMENTATION_EXECUTION_PROMPT.md  LICENSE  README.md  TECHNICAL_IMPLEMENTATION_CORE.md  VALIDATION.md  docker-compose.yml  package-lock.json  package.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
contracts/: Anchor.toml  Cargo.toml  README.md  package.json
contracts/valorem-auction/: Cargo.toml
contracts/valorem-auction/src/: contexts.rs  errors.rs  instructions.rs  lib.rs  state.rs
contracts/valorem-transfer-hook/: Cargo.toml
contracts/valorem-transfer-hook/src/: lib.rs
docs/: README.md
docs/implementation/: execution-prompt.md
docs/planning/: auction-critical-fixes-agent-prompt.md  auction-participation-ui-agent-prompt.md  commitment-simulation-debug-agent-prompt-audit-mode.md  contracts-relocation-agent-prompt.md  railway-seller-studio-asset-mint-investigation-agent-prompt.md
docs/validation/: host-validation-2026-04-02.md
frontend/: .env.example  README.md  bs58.d.ts  next.config.ts  package-lock.json  package.json  vitest.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/issuer/: page.tsx
frontend/app/marketplace/: page.tsx
frontend/app/profile/: page.tsx
frontend/components/: asset-artwork.tsx  site-header.tsx  ui.tsx
frontend/components/protocol/: auction-action-panel.tsx  wallet-control.tsx
frontend/components/providers/: app-providers.tsx  valorem-app-provider.tsx
frontend/components/views/: auction-details-view.tsx  issuer-terminal-view.tsx  marketplace-view.tsx  profile-view.tsx  seller-studio-view.tsx  user-dashboard-view.tsx
frontend/lib/: catalog.ts  env.ts  site-data.ts
frontend/lib/marketplace/: auction-store.ts  auth.ts  config.ts  db.ts  types.ts  view-models.ts
frontend/lib/protocol/: auction-init.test.ts  auction-init.ts  compliance-store.test.ts  compliance-store.ts  config.ts  format.ts  mock-state.ts  (+8 more)
frontend/scripts/: run-next.mjs
programs/valorem-transfer-hook/: Cargo.toml
programs/valorem-transfer-hook/src/: lib.rs
(+13 files in other folders)
